<resources>
    <string name="app_name">DocLoc</string>
    <string name="title_activity_main">DocLoc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="title_activity_person_view">PersonView</string>
    <string name="title_section1">Map</string>
    <string name="title_section2">Favorites</string>
    <string name="title_section3">Chat</string>
    <string-array name="main_tabs">
        <item>Map</item>
        <item>Favorites</item>
        <item>Chat</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="available">Available</string>
    <string name="busy">Busy</string>
    <string name="offline">Offline</string>
    <string name="profile_dropdown_button_text">Profile</string>
    <string name="info_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="menu_settings">Settings</string>
    <string name="person_name">Name</string>
    <string name="person_email">Email</string>
    <string name="person_department">Department</string>
    <string name="person_office">Office</string>
    <string name="person_visiting_hours">Visiting hours</string>
    <string name="person_wednesday">Wednesday</string>
    <string name="person_friday">Friday</string>
    <string name="person_other_info">Other information</string>
    <string name="status_available">Available</string>
    <string name="status_busy">Busy</string>
    <string name="status_offline">Offline</string>
    <string name="last_seen">Last seen: 19h40</string>
    <string name="favorite_added">%s added to your favorites</string>
    <string name="favorite_removed">%s removed from your favorites</string>
</resources>
