<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/rect"
              android:orientation="vertical"
              android:padding="10dp"
              android:gravity="center_horizontal">



    <LinearLayout
        android:id="@+id/dropdown_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_dropdown_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_face_black"/>

        <LinearLayout
            android:id="@+id/radiogroup_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageView_dropdown_avatar"
            android:layout_toRightOf="@+id/imageView_dropdown_avatar"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RadioButton
                    android:id="@+id/radioButton_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primaryColorDark"
                    android:checked="true"
                    android:onClick="onClickProfileStatus"
                    android:text="@string/available"/>

                <RadioButton
                    android:id="@+id/radioButton_busy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primaryColorDark"
                    android:onClick="onClickProfileStatus"
                    android:text="@string/busy"/>

                <RadioButton
                    android:id="@+id/radioButton_offline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primaryColorDark"
                    android:onClick="onClickProfileStatus"
                    android:text="@string/offline"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dropdown_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/profile_dropdown_button_text"
        />

</LinearLayout>